--- a/C++/Exo1/Exo1.cbp
+++ b/C++/Exo1/Exo1.cbp
@@ -7,8 +7,9 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Release">
-				<Option output="/Exo1" prefix_auto="1" extension_auto="1" />
-				<Option object_output="/" />
+				<Option output="Exo1" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="Release" />
+				<Option object_output="obj\Release" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
