--- a/BD/TP/TP2/TP2/nbproject/private/private.properties
+++ b/BD/TP/TP2/TP2/nbproject/private/private.properties
@@ -1,2 +1,7 @@
-compile.on.save=true
+compile.on.save=false
+do.depend=false
+do.jar=true
+file.reference.jsch-0.1.53.jar-1=C:\\Users\\Lily\\Desktop\\Dossier Line\\M1-Info\\BD\\TP\\TP2\\ressource\\jsch-0.1.53.jar
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\Lily\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
