--- a/BD/TP/TP2/TP2/nbproject/project.properties
+++ b/BD/TP/TP2/TP2/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=TP2
+application.vendor=Lily
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,16 +27,15 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/TP2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.jsch-0.1.53.jar=dist\\lib\\jsch-0.1.53.jar
 file.reference.jsch-0.1.53.jar-1=C:\\Users\\Lily\\Desktop\\Dossier Line\\M1 Info\\BD\\TP\\TP2\\ressource\\jsch-0.1.53.jar
-file.reference.ojdbc6.jar=C:\\Users\\Lily\\Desktop\\Dossier Line\\M1 Info\\BD\\TP\\TP2\\ressource\\ojdbc6.jar
+file.reference.ojdbc6.jar-1=..\\ressource\\ojdbc6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc6.jar}:\
-    ${file.reference.jsch-0.1.53.jar}:\
-    ${file.reference.jsch-0.1.53.jar-1}
+    ${file.reference.jsch-0.1.53.jar-1}:\
+    ${file.reference.ojdbc6.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
