--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ Network Trash Folder
 Temporary Items
 .apdisk
 /BD/TP/TP2/TP2/build/
+/CO/TP/Projet/BatailleEspagnole/nbproject/private/
+/CO/TP/Projet/
