--- a/QT/build-test-Desktop_Qt_5_5_1_MinGW_32bit-Debug/Makefile
+++ b/QT/build-test-Desktop_Qt_5_5_1_MinGW_32bit-Debug/Makefile
@@ -178,6 +178,9 @@ Makefile: ../test/test.pro C:/Qt/5.5/mingw492_32/mkspecs/win32-g++/qmake.conf C:
 		C:/Qt/5.5/mingw492_32/mkspecs/features/resolve_config.prf \
 		C:/Qt/5.5/mingw492_32/mkspecs/features/exclusive_builds_post.prf \
 		C:/Qt/5.5/mingw492_32/mkspecs/features/default_post.prf \
+		C:/qwt-6.1.2/features/qwtconfig.pri \
+		C:/qwt-6.1.2/features/qwtfunctions.pri \
+		C:/qwt-6.1.2/features/qwt.prf \
 		C:/Qt/5.5/mingw492_32/mkspecs/features/qml_debug.prf \
 		C:/Qt/5.5/mingw492_32/mkspecs/features/win32/rtti.prf \
 		C:/Qt/5.5/mingw492_32/mkspecs/features/precompile_header.prf \
@@ -194,6 +197,7 @@ Makefile: ../test/test.pro C:/Qt/5.5/mingw492_32/mkspecs/win32-g++/qmake.conf C:
 		C:/Qt/5.5/mingw492_32/mkspecs/features/lex.prf \
 		../test/test.pro \
 		C:/Qt/5.5/mingw492_32/lib/qtmaind.prl \
+		C:/Qt/5.5/mingw492_32/lib/Qt5Svg.prl \
 		C:/Qt/5.5/mingw492_32/lib/Qt5Widgets.prl \
 		C:/Qt/5.5/mingw492_32/lib/Qt5Gui.prl \
 		C:/Qt/5.5/mingw492_32/lib/Qt5Core.prl
@@ -317,6 +321,9 @@ C:/Qt/5.5/mingw492_32/mkspecs/features/win32/default_pre.prf:
 C:/Qt/5.5/mingw492_32/mkspecs/features/resolve_config.prf:
 C:/Qt/5.5/mingw492_32/mkspecs/features/exclusive_builds_post.prf:
 C:/Qt/5.5/mingw492_32/mkspecs/features/default_post.prf:
+C:/qwt-6.1.2/features/qwtconfig.pri:
+C:/qwt-6.1.2/features/qwtfunctions.pri:
+C:/qwt-6.1.2/features/qwt.prf:
 C:/Qt/5.5/mingw492_32/mkspecs/features/qml_debug.prf:
 C:/Qt/5.5/mingw492_32/mkspecs/features/win32/rtti.prf:
 C:/Qt/5.5/mingw492_32/mkspecs/features/precompile_header.prf:
@@ -333,6 +340,7 @@ C:/Qt/5.5/mingw492_32/mkspecs/features/yacc.prf:
 C:/Qt/5.5/mingw492_32/mkspecs/features/lex.prf:
 ../test/test.pro:
 C:/Qt/5.5/mingw492_32/lib/qtmaind.prl:
+C:/Qt/5.5/mingw492_32/lib/Qt5Svg.prl:
 C:/Qt/5.5/mingw492_32/lib/Qt5Widgets.prl:
 C:/Qt/5.5/mingw492_32/lib/Qt5Gui.prl:
 C:/Qt/5.5/mingw492_32/lib/Qt5Core.prl:
